rust/surrealdb-orm-tests/tests/snapshots/test_query_builder__tests__should_display_actual_values_in_raw_format-2.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: raw.get_bindings()
---
[
    Binding {
        param: "student:1",
        value: Thing(
            Thing {
                tb: "student",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "student:1",
        raw_string: "student:1",
        description: None,
    },
    Binding {
        param: "book:2",
        value: Thing(
            Thing {
                tb: "book",
                id: Number(
                    2,
                ),
            },
        ),
        original_inline_name: "book:2",
        raw_string: "book:2",
        description: None,
    },
    Binding {
        param: "{ in: NULL, out: NULL, timeWritten: { nanos: 0, secs: 343 } }",
        value: Object(
            Object(
                {
                    "in": Null,
                    "out": Null,
                    "timeWritten": Object(
                        Object(
                            {
                                "nanos": Number(
                                    Int(
                                        0,
                                    ),
                                ),
                                "secs": Number(
                                    Int(
                                        343,
                                    ),
                                ),
                            },
                        ),
                    ),
                },
            ),
        ),
        original_inline_name: "{ in: NULL, out: NULL, timeWritten: { nanos: 0, secs: 343 } }",
        raw_string: "{ in: NULL, out: NULL, timeWritten: { nanos: 0, secs: 343 } }",
        description: None,
    },
]
