rust/surrealdb-orm-tests/tests/snapshots/test_query_builder__tests__should_display_actual_values_in_raw_format.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: raw
---
RELATE student:1->writes->book:2 CONTENT { in: NULL, out: NULL, timeWritten: { nanos: 0, secs: 343 } } RETURN BEFORE PARALLEL ;
