rust/surrealdb-orm-tests/tests/snapshots/test_query_builder__tests__should_display_params_in_mock-2.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: mock.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "student",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "student:1",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "book",
                id: Number(
                    2,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book:2",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Object(
            Object(
                {
                    "in": Null,
                    "out": Null,
                    "timeWritten": Object(
                        Object(
                            {
                                "nanos": Number(
                                    Int(
                                        0,
                                    ),
                                ),
                                "secs": Number(
                                    Int(
                                        343,
                                    ),
                                ),
                            },
                        ),
                    ),
                },
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "{ in: NULL, out: NULL, timeWritten: { nanos: 0, secs: 343 } }",
        description: None,
    },
]
